fix PetManagerTest compatibility with java 8